Add slidenavigator and preview

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
                 <span id="slide-counter">Slide 1 of 26</span>
                 <button id="next-btn" class="nav-btn">Next</button>
             </div>
+            
+            <div class="collapsible-panel">
+                <div class="panel-header" id="overview-panel-header">
+                    <h3>Presentation Overview & Slide Navigator</h3>
+                    <button class="toggle-btn" id="toggle-overview">▼</button>
+                </div>
+                <div class="panel-content" id="overview-panel-content">
+                    <div id="slide-navigator">
+                        <!-- Slide thumbnails will be dynamically inserted here -->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script type="module" src="js/main.js"></script>
