add upload and download for zip-file with annotations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <div id="admin-controls" style="display: none;">
                 <button id="edit-btn" class="admin-btn">Edit Mode</button>
                 <button id="download-btn" class="admin-btn" style="display: none;">Download Annotations</button>
+                <button id="download-package-btn" class="admin-btn" style="display: none;">Download Complete Package</button>
+                <div id="upload-controls" style="display: none;">
+                    <label for="slide-upload" class="upload-label">Upload Slides+Annotations Zip:</label>
+                    <input type="file" id="slide-upload" accept=".zip" class="file-upload">
+                </div>
             </div>
         </div>
         <div class="slide-container">
